--- a/faq.html
+++ b/faq.html
@@ -2,51 +2,46 @@
 <html>
 
 <head>
-    <title>The Boba Festival</title>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-        crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>The Boba Festival</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>
-                    <div id="homeButton">
-                        <a href="index.html">THE BOBA FESTIVAL</a>
-                    </div>
-                </li>
-                <li>
-                    <a href="about.html">ABOUT</a>
-                </li>
-                <li>
-                    <a href="vendors.html">VENDORS</a>
-                </li>
-                <li>
-                    <a href="volunteers.html">VOLUNTEERS</a>
-                </li>
-                <li>
-                    <a href="gallery.html">GALLERY</a>
-                </li>
-                <li>
-                    <a href="faq.html">FAQ</a>
-                </li>
-                <li>
-                    <a href="contact.html">CONTACT</a>
-                </li>
-            </ul>
-        </nav>
-        <img src="pictures/contact.jpg" style="width: 100%">
-        <!-- feature photo -->
-    </header>
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top" style="background-color: #7dc4c8; margin-bottom: 0; padding: 0;">
+        <div class="container" style="margin-left: 10px;">
+            <a class="navbar-brand" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="mobile-nav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html" style="color: white;">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html" style="color: white;">GALLERY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="faq.html" style="color: white;">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html" style="color: white;">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <img src="pictures/contact.jpg" style="width: 100%">
+    <!-- feature photo -->
     <div id="faqBackground">
         <div id="faqWrapper">
             <section>
@@ -76,9 +71,9 @@
             </section>
         </div>
     </div>
-    <div id="footerWrapper">
-        <footer style="background-color: #7dc4c8; padding-top: 15px;">
-            <div id="footerLeft">
+    <footer style="background-color: #7dc4c8; padding-top: 15px;">
+        <div class="row">
+            <div class="col-lg-4 mb-5">
                 <h8>- FESTIVAL INFORMATION -</h8>
                 <br>
                 <h9>12:00 PM to 4:00 PM</h9>
@@ -87,7 +82,7 @@
                 <br>
                 <h9>Santa Clara County Fairgrounds</h9>
             </div>
-            <div id="footerMiddle">
+            <div class="col-lg-4">
                 <h8>- FOLLOW US -</h8>
                 <div id="socialMedia">
                     <ul id="socialSites">
@@ -106,26 +101,27 @@
                                 <img src="pictures/tw2.png" alt="Twitter" style="width:30px;height:30px;">
                             </a>
                         </li>
-                        <li>
-                            <a href="https://www.flickr.com/photos/bobafestival" target="_blank" class="selected">
-                                <img src="pictures/flkr2.png" alt="Flickr" style="width:30px;height:30px;">
-                            </a>
-                        </li>
                     </ul>
+                    <br>
+                    <h9>&copy; 2018 The Boba Festival</h9>
                 </div>
-                <br>
-                <h9>&copy; 2018 The Boba Festival</h9>
             </div>
-            <div id="footerRight">
+            <div class="col-lg-4">
                 <h8>- GET IN TOUCH -</h8>
                 <br>
                 <h9>
                     <a href="mailto:info@officialbobafest.com">info@officialbobafest.com</a>
                 </h9>
             </div>
-            <br style="clear: left;" />
-        </footer>
-    </div>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
