Added gallery pictures

--- a/gallery.html
+++ b/gallery.html
@@ -43,8 +43,56 @@
     <img src="pictures/contact.jpg" style="width: 100%">
     <!-- feature photo -->
     <div id="galleryWrapper">
-        <section>
-        </section>
+        <div class="row" style="padding: 45px 45px 0 45px;">
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img src="./pictures/gallery/lesliesamsharon.jpg" alt="" class="gallerypic">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img class="gallerypic" src="./pictures/gallery/20224410983_93fdabf3f4_z.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img class="gallerypic" src="./pictures/gallery/20657331980_81293df49b_z.jpg" alt="">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img class="gallerypic" src="./pictures/gallery/20658704429_6239c2ee2e_z.jpg" alt="">
+            </div>
+        </div>
+        <div class="row" style="padding: 0 45px;">
+            <div class="col-lg-6 col-md-12 col-sm-12 mb-5">
+                <img src="./pictures/gallery/20657385218_d2f0867e8f_k.jpg" alt="" class="gallerypic">
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12 mb-5">
+                <img src="./pictures/gallery/20852521611_01e209e81e_k.jpg" alt="" class="gallerypic">
+            </div>
+        </div>
+        <div class="row" style="padding: 0 45px 0 45px;">
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img src="./pictures/gallery/20835815402_8aaf56bbd7_z (1).jpg" alt="" class="gallerypic">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img src="./pictures/gallery/20835820292_c63e3535b5_z.jpg" alt="" class="gallerypic">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img src="./pictures/gallery/20845380175_c2efe6acb2_z.jpg" alt="" class="gallerypic">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img src="./pictures/gallery/20852523781_a56639006a_z.jpg" alt="" class="gallerypic">
+            </div>
+        </div>
+        <div class="row" style="padding: 0 45px 45px 45px;">
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img src="./pictures/gallery/20224400623_bd60983d2f_z (1).jpg" alt="" class="gallerypic">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img src="./pictures/gallery/20852576891_270aae3ba1_z.jpg" alt="" class="gallerypic">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 mb-5">
+                <img src="./pictures/gallery/20852532011_8e6529fa74_z.jpg" alt="" class="gallerypic">
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <img src="./pictures/gallery/20852535901_d6668f7fc8_z.jpg" alt="" class="gallerypic">
+            </div>
+        </div>
     </div>
     <footer style="background-color: #7dc4c8; padding-top: 15px;">
         <div class="row">
