Brochure added to About Me page

--- a/about.html
+++ b/about.html
@@ -44,11 +44,16 @@
     <!-- feature photo -->
 
     <div id="aboutWrapper">
-        <section>
-            <h10>OUR SPONSOR</h10>
-            <br>
-            <img class="fanalepic" src="pictures/Fanale.png">
-        </section>
+        <div class="row">
+            <div class="col-lg-6">
+                <img class="bobafestbrochure" src="pictures/BobaFestBrochure.png" alt="BobafestBrochure">
+            </div>
+            <div class="col-lg-6">
+                <h10>OUR SPONSOR</h10>
+                <br>
+                <img class="fanalepic" src="pictures/Fanale.png">
+            </div>
+        </div>
     </div>
     <footer style="background-color: #7dc4c8; padding-top: 15px;">
         <div class="row">
