footer font changed to biko

--- a/contact.html
+++ b/contact.html
@@ -99,16 +99,16 @@
     <footer style="background-color: #7dc4c8; padding-top: 15px;">
         <div class="row">
             <div class="col-lg-4 mb-5">
-                <h8>- FESTIVAL INFORMATION -</h8>
+                <h8 class="bikofont">- FESTIVAL INFORMATION -</h8>
                 <br>
-                <h9>12:00 PM to 4:00 PM</h9>
+                <h9 class="bikofont">12:00 PM to 4:00 PM</h9>
                 <br>
-                <h9>Saturday, October 13, 2018</h9>
+                <h9 class="bikofont">Saturday, October 13, 2018</h9>
                 <br>
-                <h9>Santa Clara County Fairgrounds</h9>
+                <h9 class="bikofont">Santa Clara County Fairgrounds</h9>
             </div>
             <div class="col-lg-4">
-                <h8>- FOLLOW US -</h8>
+                <h8 class="bikofont">- FOLLOW US -</h8>
                 <div id="socialMedia">
                     <ul id="socialSites">
                         <li>
@@ -128,14 +128,14 @@
                         </li>
                     </ul>
                     <br>
-                    <h9>&copy; 2018 The Boba Festival</h9>
+                    <h9 class="bikofont">&copy; 2018 The Boba Festival</h9>
                 </div>
             </div>
             <div class="col-lg-4">
-                <h8>- GET IN TOUCH -</h8>
+                <h8 class="bikofont">- GET IN TOUCH -</h8>
                 <br>
                 <h9>
-                    <a href="mailto:info@officialbobafest.com">info@officialbobafest.com</a>
+                    <a class="bikofont" href="mailto:info@officialbobafest.com">info@officialbobafest.com</a>
                 </h9>
             </div>
         </div>
