Font changed for the entire website

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" style="background-color: #7dc4c8; margin-bottom: 0; padding: 0;">
         <div class="container" style="margin-left: 10px;">
-            <a class="navbar-brand navbarFont" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
+            <a class="navbar-brand ohwonderfulFont" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,7 +51,7 @@
                 </a>
             </div>
             <div class="col-lg-6">
-                <h10>OUR SPONSOR</h10>
+                <h10 class="bikofont">OUR SPONSOR</h10>
                 <br>
                 <img class="fanalepic" src="pictures/Fanale.png">
             </div>
