--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top" style="background-color: #7dc4c8; margin-bottom: 0; padding: 0;">
         <div class="container" style="margin-left: 10px;">
-            <a class="navbar-brand navbarFont" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
+            <a class="navbar-brand ohwonderfulFont" href="index.html" style="color: white;">THE BOBA FESTIVAL</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -25,16 +25,16 @@
             <div class="collapse navbar-collapse" id="mobile-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link navbarFont" href="about.html" style="color: white;">ABOUT</a>
+                        <a class="nav-link ohwonderfulFont" href="about.html" style="color: white;">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbarFont" href="gallery.html" style="color: white;">GALLERY</a>
+                        <a class="nav-link ohwonderfulFont" href="gallery.html" style="color: white;">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbarFont" href="faq.html" style="color: white;">FAQ</a>
+                        <a class="nav-link ohwonderfulFont" href="faq.html" style="color: white;">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbarFont" href="contact.html" style="color: white;">CONTACT</a>
+                        <a class="nav-link ohwonderfulFont" href="contact.html" style="color: white;">CONTACT</a>
                     </li>
                 </ul>
             </div>
@@ -48,15 +48,15 @@
                 <div id="leftSide">
                     <div class="container2">
                         <form id="contact" action="mail.php" method="POST">
-                            <label for="name">NAME</label>
+                            <label class="bikofont" for="name">NAME</label>
                             <fieldset>
                                 <input name="name" placeholder="YOUR NAME" type="text" tabindex="1" required autofocus>
                             </fieldset>
-                            <label for="email">EMAIL ADDRESS</label>
+                            <label class="bikofont" for="email">EMAIL ADDRESS</label>
                             <fieldset>
                                 <input name="email" placeholder="YOUR EMAIL ADDRESS" type="email" tabindex="2" required>
                             </fieldset>
-                            <label for="message">MESSAGE</label>
+                            <label class="bikofont" for="message">MESSAGE</label>
                             <fieldset>
                                 <textarea name="message" placeholder="TYPE YOUR MESSAGE HERE..." tabindex="3" required></textarea>
                             </fieldset>
@@ -67,12 +67,12 @@
                     </div>
                 </div>
                 <div id="rightSide">
-                    <h4>CONTACT US</h4>
-                    <h5>EMAIL ADDRESS</h5>
+                    <h4 class="bikofont">CONTACT US</h4>
+                    <h5 class="bikofont">EMAIL ADDRESS</h5>
                     <h6>
-                        <a href="mailto:info@officialbobafest.com">info@officialbobafest.com</a>
+                        <a class="bikofont" href="mailto:info@officialbobafest.com">info@officialbobafest.com</a>
                     </h6>
-                    <h5>SOCIAL MEDIA</h5>
+                    <h5 class="bikofont">SOCIAL MEDIA</h5>
                     <div id="socialMedia">
                         <ul id="socialSites">
                             <li>
