--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     </nav>
     <!--Landing-->
     <img src="pictures/contact.jpg" style="width: 100%">
-    <div id="homeWrapper">
-        <section>
-            <h11 class="bikofont">COMING OCTOBER 2018</h11>
+    <div class="row mt-4 mb-4">
+        <div class="col-lg-6 col-md-12 col-sm-12 countdowncontainer">
+            <h11 class="bikofont timelineheader">COMING OCTOBER 2018</h11>
             <div id="countdown">
                 <p id="demo"></p>
                 <script>
@@ -67,8 +67,13 @@
                     }, 1000);
                 </script>
             </div>
-        </section>
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.6568742928957!2d-121.85603604963366!3d37.30326524682129!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808e32fc62392ed5%3A0x219f4c88363a8d57!2sSanta+Clara+County+Fairgrounds!5e0!3m2!1sen!2sus!4v1532325383108"
+                width="400" height="300" frameborder="0" style="border:0; margin: 0 auto; display: block;" allowfullscreen></iframe>
+        </div>
     </div>
+
     <footer style="background-color: #7dc4c8; padding-top: 15px;">
         <div class="row">
             <div class="col-lg-4 mb-5">
