--- a/about.html
+++ b/about.html
@@ -25,16 +25,16 @@
             <div class="collapse navbar-collapse" id="mobile-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link navbarFont" href="about.html" style="color: white;">ABOUT</a>
+                        <a class="nav-link ohwonderfulFont" href="about.html" style="color: white;">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbarFont" href="gallery.html" style="color: white;">GALLERY</a>
+                        <a class="nav-link ohwonderfulFont" href="gallery.html" style="color: white;">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbarFont" href="faq.html" style="color: white;">FAQ</a>
+                        <a class="nav-link ohwonderfulFont" href="faq.html" style="color: white;">FAQ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link navbarFont" href="contact.html" style="color: white;">CONTACT</a>
+                        <a class="nav-link ohwonderfulFont" href="contact.html" style="color: white;">CONTACT</a>
                     </li>
                 </ul>
             </div>
