Made page responsive by adding Bootstrap gridding

--- a/contact.html
+++ b/contact.html
@@ -44,56 +44,60 @@
     <!-- feature photo -->
     <div id="contactBackground">
         <div id="contactWrapper">
-            <section>
-                <div id="leftSide">
-                    <div class="container2">
-                        <form id="contact" action="mail.php" method="POST">
-                            <label class="bikofont" for="name">NAME</label>
-                            <fieldset>
-                                <input name="name" placeholder="YOUR NAME" type="text" tabindex="1" required autofocus>
-                            </fieldset>
-                            <label class="bikofont" for="email">EMAIL ADDRESS</label>
-                            <fieldset>
-                                <input name="email" placeholder="YOUR EMAIL ADDRESS" type="email" tabindex="2" required>
-                            </fieldset>
-                            <label class="bikofont" for="message">MESSAGE</label>
-                            <fieldset>
-                                <textarea name="message" placeholder="TYPE YOUR MESSAGE HERE..." tabindex="3" required></textarea>
-                            </fieldset>
-                            <fieldset>
-                                <button name="submit" type="submit" id="contact-submit" value="Send" data-submit="...Sending">SUBMIT</button>
-                            </fieldset>
-                        </form>
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div id="leftSide">
+                        <div class="container2">
+                            <form id="contact" action="mail.php" method="POST">
+                                <label class="bikofont" for="name">NAME</label>
+                                <fieldset>
+                                    <input name="name" placeholder="YOUR NAME" type="text" tabindex="1" required autofocus>
+                                </fieldset>
+                                <label class="bikofont" for="email">EMAIL ADDRESS</label>
+                                <fieldset>
+                                    <input name="email" placeholder="YOUR EMAIL ADDRESS" type="email" tabindex="2" required>
+                                </fieldset>
+                                <label class="bikofont" for="message">MESSAGE</label>
+                                <fieldset>
+                                    <textarea name="message" placeholder="TYPE YOUR MESSAGE HERE..." tabindex="3" required></textarea>
+                                </fieldset>
+                                <fieldset>
+                                    <button name="submit" type="submit" id="contact-submit" value="Send" data-submit="...Sending">SUBMIT</button>
+                                </fieldset>
+                            </form>
+                        </div>
                     </div>
                 </div>
-                <div id="rightSide">
-                    <h4 class="bikofont">CONTACT US</h4>
-                    <h5 class="bikofont">EMAIL ADDRESS</h5>
-                    <h6>
-                        <a class="bikofont" href="mailto:info@officialbobafest.com">info@officialbobafest.com</a>
-                    </h6>
-                    <h5 class="bikofont">SOCIAL MEDIA</h5>
-                    <div id="socialMedia">
-                        <ul id="socialSites">
-                            <li>
-                                <a href="https://www.facebook.com/bobafestival" target="_blank" class="selected">
-                                    <img src="pictures/fb.png" alt="Facebook" style="width:40px;height:40px;">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.instagram.com/bobafestival" target="_blank" class="selected">
-                                    <img src="pictures/ig.png" alt="Instagram" style="width:40px;height:40px;">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://twitter.com/bobafestival" target="_blank" class="selected">
-                                    <img src="pictures/tw.png" alt="Twitter" style="width:40px;height:40px;">
-                                </a>
-                            </li>
-                        </ul>
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div id="rightSide">
+                        <h4 class="bikofont">CONTACT US</h4>
+                        <h5 class="bikofont">EMAIL ADDRESS</h5>
+                        <h6>
+                            <a class="bikofont" href="mailto:info@officialbobafest.com">info@officialbobafest.com</a>
+                        </h6>
+                        <h5 class="bikofont">SOCIAL MEDIA</h5>
+                        <div id="socialMedia">
+                            <ul id="socialSites">
+                                <li>
+                                    <a href="https://www.facebook.com/bobafestival" target="_blank" class="selected">
+                                        <img src="pictures/fb.png" alt="Facebook" style="width:40px;height:40px;">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://www.instagram.com/bobafestival" target="_blank" class="selected">
+                                        <img src="pictures/ig.png" alt="Instagram" style="width:40px;height:40px;">
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://twitter.com/bobafestival" target="_blank" class="selected">
+                                        <img src="pictures/tw.png" alt="Twitter" style="width:40px;height:40px;">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
     </div>
     <footer style="background-color: #7dc4c8; padding-top: 15px;">
